# gest-odepousadas

./: .gitignore  README.md  package-lock.json
backend/: .env.example  README.md  list_models.py  pyproject.toml  requirements.txt  start.sh  test_firestore.py  test_gemini.py  uvicorn.err
backend/app/: main.py  test_firestore.py
backend/app/api/: __init__.py  ai_consultant.py  auth.py  calendar.py  companies.py  dashboard.py  expenses.py  financial_dashboard.py  guests.py  incomes.py  login.py  maintenance.py  movements.py  receipts.py  reservations.py  rooms.py  settings.py  settings_users.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: __init__.py  admin.py  auth.py  companies.py  dashboard.py  expenses.py  financials.py  guests.py  maintenance.py  reservations.py  rooms.py
backend/app/core/: config.py  firebase.py
backend/app/schemas/: __init__.py  admin.py  auth.py  company.py  dashboard.py  expense.py  financial.py  guest.py  maintenance.py  reservation.py  room.py  user.py
backend/inn_management_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: README.md  architecture.md  prd-resumo.md  roadmap.md
frontend/: README.md  index.html  insert.txt  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  AuthContext.tsx  main.tsx  styles.css
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: auth.ts  firebase.ts  userStore.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx
frontend/src/providers/: ThemeProvider.tsx
frontend/src/routes/: PrivateRoute.tsx  navigation.ts
(+19 files in other folders)
