[project]
name = "inn-management-backend"
version = "0.1.0"
description = "API FastAPI para gestão operacional de pousadas."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "firebase-admin>=6.5.0",
    "google-cloud-firestore>=2.15.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.uvicorn]
factory = true
app = "app.main:get_application"
reload = true
host = "0.0.0.0"
port = 8000

[build-system]
requires = ["setuptools>=65.0.0"]
build-backend = "setuptools.build_meta"
